Merge Command.java and JdkTool.java into Bach.java